[build-system] 
    requires = ["flask==2.3.2", "requests==2.31.0", "paho-mqtt==1.6.1"] 
    build-backend = "setuptools.build_meta"
[tool.poetry.dependencies] 
    python = "^3.9" 
    db-sqlite3 = "0.0.1" 
    pycopy-fcntl = "0.0.4" 
    micropython-fcntl = "0.0.4"
# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
# [tool.poetry]
# name = "homework"
# version = "1.0.0"
# description = ""
# authors = []
# [tool.poetry.dependencies]
# python = "^3.8"
# flask = "^1.1.2"
# paho-mqtt = "^1.5.1"
# python-sql = "^1.4.2"
# MySQL-python = "^1.2.5"  
# mysql-connector-python = "^8.0.25"